--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   "dependencies": {
     "@ehmpathy/error-fns": "1.3.7",
     "domain-glossaries": "1.0.0",
-    "domain-objects": "0.24.2",
+    "domain-glossary-geocode": "1.0.1",
     "type-fns": "1.19.0",
     "zipcodes": "8.0.0"
   },
